[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-package-ccheung93"
dynamic = ["version"]
dependencies = [
  "numpy"
]
authors = [
  { name="Charles Cheung", email="ccheung@udel.edu"}
]
description = "a small test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent", 
  "Private :: Do Not Upload",
]

[tool.hatch]
version.path = "src/example_package_ccheung93/__init__.py"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Home-page" = "https://ccheung93.github.io/example-package-ccheung93"
"Source Code" = "https://github.com/ccheung93/example-package-ccheung93"
